@@ -7,6 +7,7 @@ kdesdk (4:4.10.2-0r0) UNRELEASED; urgency=low
   * Bump kdepimlibs5-dev build dependency to 4:4.10.2.
   * Bump libkonq5-dev build dependency to 4:4.10.2.
   * Refresh patch append_kde.diff.
+  * Refresh patch enable_debianabimanager.diff.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 11 Apr 2013 22:58:37 +0200
 
